@@ -4,6 +4,7 @@
 
 == rufus-scheduler - 1.0.13    not yet released
 
+- bug   #23458 : :timeout not working on JRuby (reported by Chris Evans). Fixed.
 - patch #23430 : gemspec patch by Ryan Sonnek
 - patch #23412 : faster CronLine#next_time patch by TobyH
 
